--- a/src/app/modal-vivenciar-momentos/modal-vivenciar-momentos.page.html
+++ b/src/app/modal-vivenciar-momentos/modal-vivenciar-momentos.page.html
@@ -1,21 +1,46 @@
 <!--{{conteudoModal}}-->
 <ion-content>
-    <ion-title class="ion-padding">Vivenciar momentos.</ion-title>
-    <ion-label class="ion-padding">Qual o tipo de momento que pretende registar?</ion-label>
-    <ion-list class="ion-padding" style="background-color: transparent;">
-        <ion-radio-group id="momento" value="foto">
-            <ion-item class="item-background-color">
-                <ion-radio value="foto"></ion-radio>
-                <ion-label style="padding-left: 5px;">Fotografia</ion-label>
-            </ion-item>
-            <ion-item class="item-background-color">
-                <ion-radio value="video"></ion-radio>
-                <ion-label style="padding-left: 5px;">Video</ion-label>
-            </ion-item>
-            <div class="row ion-padding" ng-if="">
-                <i-label class="">Tempo de gravação</i-label>
-                <ion-input></ion-input>
-            </div>
-        </ion-radio-group>
-    </ion-list>
+    <div *ngIf="mostra1">
+        <ion-title class="ion-padding">Vivenciar momentos.</ion-title>
+        <ion-label class="ion-padding">Qual o tipo de momento que pretende registar?</ion-label>
+        <ion-list class="ion-padding" style="background-color: transparent;">
+            <ion-radio-group id="momento" value="foto" (ionChange)="onSelectChange($event)">
+                <ion-item class="item-background-color">
+                    <ion-radio value="foto"></ion-radio>
+                    <ion-label style="padding-left: 5px;">Fotografia</ion-label>
+                </ion-item>
+                <ion-item class="item-background-color">
+                    <ion-radio value="video"></ion-radio>
+                    <ion-label style="padding-left: 5px;">Video</ion-label>
+                </ion-item>
+                <div class="row ion-padding" *ngIf="video">
+                    <ion-label class="">Tempo de gravação</ion-label>
+                    <ion-input placeholder="00:00"></ion-input>
+                </div>
+            </ion-radio-group>
+        </ion-list>
+        <ion-grid fixed>
+            <ion-row class="ion-justify-content-center">
+                <ion-col size="auto">
+                    <ion-button size="small">Cancelar</ion-button>
+                </ion-col>
+                <ion-col size="auto">
+                    <ion-button size="small" (click)="comecaRegistar()">Começar</ion-button>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+
+
+    </div>
+
+    <div *ngIf="mostra2">
+        <ion-title class="ion-padding">Vivenciar momentos.</ion-title>
+        <ion-label class="ion-padding">Posicione o dispositivo virado para o seu grupo de amigos e aproveite o momento!</ion-label><br>
+        <ion-label class="ion-padding">Pode deixar que nos tratamos dos momentos.</ion-label>
+        <ion-row class="ion-justify-content-center">
+            <ion-col size="auto">
+                <ion-button size="small" (click)="terminarVivenciarMomento()">Terminar</ion-button>
+            </ion-col>
+        </ion-row>
+    </div>
 </ion-content>
