--- a/src/app/modal-partilha/modal-partilha.page.html
+++ b/src/app/modal-partilha/modal-partilha.page.html
@@ -4,12 +4,12 @@
     </ion-toolbar>
 </ion-header>
 <ion-content style="height: 40%;" class="transparent-background-color">
-    <ion-list class="transparent-background-color">
+    <ion-list class="transparent-background-color" *ngFor="let amigo of amigos">
         <ion-item>
             <ion-avatar style="margin-right: 15px ;">
-                <img src="../../assets/img/avatar.jpg" />
+                <img [src]="amigo.picture.medium" />
             </ion-avatar>
-            Mauro
+            {{amigo.name.first}} {{amigo.name.last}}
             <ion-button slot="end" (click)="partilhaAmiguinho(this)">
                 Partilha
             </ion-button>
