--- a/src/app/modal-partilha/modal-partilha.page.html
+++ b/src/app/modal-partilha/modal-partilha.page.html
@@ -4,8 +4,8 @@
     </ion-toolbar>
 </ion-header>
 <ion-content style="height: 40%;" class="transparent-background-color">
-    <ion-list class="transparent-background-color" *ngFor="let amigo of amigos">
-        <ion-item>
+    <ion-list class="transparent-background-color">
+        <ion-item *ngFor="let amigo of amigos">
             <ion-avatar style="margin-right: 15px ;">
                 <img [src]="amigo.picture.medium" />
             </ion-avatar>
