--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -20,8 +20,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
-                    *ngFor="let i of [].constructor(3) ">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(3) ">
                 </app-media-item>
             </ion-col>
         </ion-row>
@@ -38,8 +37,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
-                    *ngFor="let i of [].constructor(6) ">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(6) ">
                 </app-media-item>
             </ion-col>
         </ion-row>
@@ -56,8 +54,7 @@
         </ion-row>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
-                    *ngFor="let i of [].constructor(10) ">
+                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29" *ngFor="let i of [].constructor(10) ">
                 </app-media-item>
             </ion-col>
         </ion-row>
