--- a/src/app/components/media-item/media-item.component.html
+++ b/src/app/components/media-item/media-item.component.html
@@ -1,13 +1,18 @@
-<ion-card style="width: 28%;display: inline-block;" *ngIf="isActive()" tappable (touchstart)="startPress()" (touchend)="endPress()" (click)="onClick()">
-    <ion-card-header style="padding:10px;">
-        <ion-card-subtitle class="ion-float-right">{{time}}</ion-card-subtitle>
-        <ion-checkbox style="display:block;" *ngIf="isCheckBoxVisible()" [(ngModel)]="checked" (click)="onClick()">
+<ion-card style="width: 28%;display: inline-block;" *ngIf="isActive()" tappable (touchstart)="startPress()"
+    (touchend)="endPress()" (click)="onClick()">
+
+
+    <div class="topBox">
+        <ion-checkbox class="ion-float-left" *ngIf="isCheckBoxVisible()" [(ngModel)]="checked" (click)="onClick()">
         </ion-checkbox>
-    </ion-card-header>
+        <ion-text class="ion-float-right">
+            {{time}}
+        </ion-text>
+    </div>
 
     <ion-card-content>
         <img src={{image}} />
-        <ion-text>
+        <ion-text class="bottonBox">
             {{place}}
         </ion-text>
     </ion-card-content>
