--- a/src/app/inserir-morada/inserir-morada.page.html
+++ b/src/app/inserir-morada/inserir-morada.page.html
@@ -8,6 +8,10 @@
 </ion-header>
 
 <ion-content class="ion-padding">
+
+    <form [formGroup]="addressForm" (ngSubmit)="submitForm()">
+
+    </form>
     <div style="height: 40%;">
         <ion-item-divider>
             <ion-label>
@@ -16,7 +20,7 @@
         </ion-item-divider>
         <ion-item>
             <ion-label position="floating">Descrição da morada</ion-label>
-            <ion-input></ion-input>
+            <ion-input type="text" formControlName="morada"></ion-input>
         </ion-item>
         <ion-item style="padding-top: 15px;">
             <ion-label position="floating">Morada</ion-label>
