--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -11,16 +11,17 @@
 
     <ion-grid fixed>
         <ion-row>
-            <ion-col size="auto">
+            <ion-col size="auto" class="title">
                 <ion-text>
-                    <h1 *ngIf="!isSelectMode()">Palco(hoje)</h1>
-                    <h1 class="titleSelectMode" *ngIf="isSelectMode()">Palco(hoje)</h1>
+                    <h1 *ngIf="!isSelectMode()">Palco <span class="complementTitle">(hoje)</span></h1>
+                    <h1 class="titleSelectMode" *ngIf="isSelectMode()">Palco (hoje)
+                    </h1>
                 </ion-text>
             </ion-col>
         </ion-row>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
+                <app-media-item route="momentos" image="../../assets/img/01.jpg" place="Viana" time="13:29"
                     *ngFor="let i of [].constructor(3) ">
                 </app-media-item>
             </ion-col>
@@ -29,16 +30,16 @@
 
     <ion-grid fixed>
         <ion-row>
-            <ion-col size="auto">
+            <ion-col size="auto" class="title">
                 <ion-text>
-                    <h1 *ngIf="!isSelectMode()">Cartaz(última semana)</h1>
-                    <h1 class="titleSelectMode" *ngIf="isSelectMode()">Cartaz(última semana)</h1>
+                    <h1 *ngIf="!isSelectMode()">Cartaz <span class="complementTitle">(última semana)</span></h1>
+                    <h1 class="titleSelectMode" *ngIf="isSelectMode()">Cartaz (última semana)</h1>
                 </ion-text>
             </ion-col>
         </ion-row>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="momentos" image="../../assets/img/imgDef.png" place="Viana" time="13:29"
+                <app-media-item route="momentos" image="../../assets/img/02.jpg" place="Viana" time="13:29"
                     *ngFor="let i of [].constructor(6) ">
                 </app-media-item>
             </ion-col>
@@ -47,9 +48,9 @@
 
     <ion-grid fixed>
         <ion-row>
-            <ion-col size="auto">
+            <ion-col size="auto" class="title">
                 <ion-text>
-                    <h1 *ngIf="!isSelectMode()">Bastidores(outros)</h1>
+                    <h1 *ngIf="!isSelectMode()">Bastidores <span class="complementTitle">(outros)</span></h1>
                     <h1 class="titleSelectMode" *ngIf="isSelectMode()">Bastidores(outros)</h1>
                 </ion-text>
             </ion-col>
