--- a/src/app/pagina-inicial/pagina-inicial.page.scss
+++ b/src/app/pagina-inicial/pagina-inicial.page.scss
@@ -1,3 +1,13 @@
 .titleSelectMode{
+   
     font-size:medium;
+}
+
+.complementTitle{
+    font-size: 1rem;
+}
+
+.title{
+    margin-left: 16px;
+    padding: 0px;
 }
