--- a/src/app/modal-search/modal-search.page.html
+++ b/src/app/modal-search/modal-search.page.html
@@ -1,14 +1,3 @@
-<ion-header>
-    <ion-header>
-        <!--<ion-toolbar>
-            <ion-title>pesquisa</ion-title>
-            <ion-buttons slot="end">
-                <ion-button (click)="dismiss()">Close</ion-button>
-            </ion-buttons>
-        </ion-toolbar>-->
-    </ion-header>
-</ion-header>
-
-<ion-content class="ion-margin">
-    <ion-searchbar spellcheck="true"></ion-searchbar>
+<ion-content>
+    <ion-searchbar spellcheck="true" style="border-radius: 25px;"></ion-searchbar>
 </ion-content>
