--- a/src/global.scss
+++ b/src/global.scss
@@ -34,11 +34,14 @@ ion-content.background {
 }
 
 .modal-search-css .modal-wrapper {
-    height: 20%;
-    width: 80%;
+    height: 7%;
+    width: 90%;
     top: 50%;
-    position: absolute;
-    display: block;
+    border-radius: 25px;
+}
+
+ion-backdrop {
+    --backdrop-opacity: 0.87;
 }
 
 .modal-vivenciar-css .modal-wrapper {
