--- a/src/app/pagina-inicial/pagina-inicial.page.html
+++ b/src/app/pagina-inicial/pagina-inicial.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-    <ion-toolbar class="i-text-center" *ngIf="isSelectMode()">
+    <ion-toolbar *ngIf="isSelectMode()">
         <ion-title size="small"> {{getMsgCounter()}} </ion-title>
         <ion-icon color="white" slot="end" name="copy-outline" (click)="selectAll()">
         </ion-icon>
