--- a/src/app/comprar/comprar.page.html
+++ b/src/app/comprar/comprar.page.html
@@ -5,14 +5,24 @@
             <ion-back-button></ion-back-button>
         </ion-buttons>
     </ion-toolbar>
-    <ion-toolbar class="i-text-center" *ngIf="isSelectMode()">
-        <ion-title size="small"> {{getMsgCounter()}} </ion-title>
-        <ion-icon color="white" slot="end" name="copy-outline" (click)="selectAll()">
-        </ion-icon>
-        <ion-icon slot="end" name="remove-outline" (click)="unSelectAll()"></ion-icon>
-        <ion-icon slot="start" name="close-outline" (click)="cancelSelect()"></ion-icon>
-        <ion-icon slot="end" name="trash-outline" (click)="remove()"></ion-icon>
+    <ion-toolbar *ngIf="isSelectMode()">
+        <ion-button size="small" color="dark" fill="clear" slot="start" (click)="cancelSelect()">
+            <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-button>
+
+        <ion-title size="medium"> {{getMsgCounter()}} </ion-title>
+
+        <ion-button size="small" color="dark" fill="clear" slot="end" (click)="selectAll()">
+            <ion-icon slot="icon-only" name="checkmark-done"></ion-icon>
+        </ion-button>
+        <ion-button size="small" color="dark" fill="clear" slot="end" (click)="unSelectAll()">
+            <ion-icon slot="icon-only" name="square-outline"></ion-icon>
+        </ion-button>
+        <ion-button size="small" color="dark" fill="clear" slot="end" (click)="remove()">
+            <ion-icon slot="icon-only" name="trash-outline"></ion-icon>
+        </ion-button>
     </ion-toolbar>
+
 </ion-header>
 
 <ion-content>
