--- a/src/app/notificacoes/notificacoes.page.html
+++ b/src/app/notificacoes/notificacoes.page.html
@@ -1,9 +1,11 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>notificacoes</ion-title>
-        <ion-buttons slot="end">
-            <ion-button (click)="dismiss()">Close</ion-button>
-        </ion-buttons>
+        <ion-title size="medium">Notificações</ion-title>
+
+        <ion-button size="small" color="dark" fill="clear" slot="end" (click)="dismiss()">
+            <ion-icon slot="icon-only" name="close"></ion-icon>
+        </ion-button>
+
     </ion-toolbar>
 
 </ion-header>
@@ -12,42 +14,46 @@
     <ion-list>
         <ion-item>
             <ion-avatar slot="start">
-                <img src="../../assets/img/avatar.jpg">
+                <img src="../../assets/img/jb.png">
             </ion-avatar>
             <ion-label>
-                <h2>Jachson </h2>
-                <h3>Partilhou um album!</h3>
+                <h2>Jackson Júnior</h2>
+                <h4>Partilhou um momento consigo!</h4>
             </ion-label>
+            <ion-icon color="dark" slot="end" name="notifications-outline"></ion-icon>
         </ion-item>
 
         <ion-item>
             <ion-avatar slot="start">
-                <img src="../../assets/img/avatar.jpg">
+                <img src="../../assets/img/leo.png">
             </ion-avatar>
             <ion-label>
-                <h2>Valdo</h2>
-                <h3>Partilhou um album!</h3>
+                <h2>Leonardo Lopez</h2>
+                <h4>Partilhou um momento consigo!</h4>
             </ion-label>
+            <ion-icon color="dark" slot="end" name="notifications-outline"></ion-icon>
         </ion-item>
 
         <ion-item>
             <ion-avatar slot="start">
-                <img src="../../assets/img/avatar.jpg">
+                <img src="../../assets/img/valdo.png">
             </ion-avatar>
             <ion-label>
-                <h2>Rey</h2>
-                <h3>Partilhou um album!</h3>
+                <h2>Valdo Mpinga</h2>
+                <h4>Partilhou um momento consigo!</h4>
             </ion-label>
+            <ion-icon color="dark" slot="end" name="notifications-outline"></ion-icon>
         </ion-item>
 
         <ion-item>
             <ion-avatar slot="start">
-                <img src="../../assets/img/avatar.jpg">
+                <img src="../../assets/img/nat.png">
             </ion-avatar>
             <ion-label>
-                <h2>Luke</h2>
-                <h3>Partilhou um album!</h3>
+                <h2>Natália Fusco</h2>
+                <h4>Partilhou um momento consigo!</h4>
             </ion-label>
+            <ion-icon color="dark" slot="end" name="notifications-outline"></ion-icon>
         </ion-item>
     </ion-list>
 </ion-content>
