--- a/src/app/momentos/momentos.page.html
+++ b/src/app/momentos/momentos.page.html
@@ -1,11 +1,7 @@
 <ion-header>
     <ion-toolbar class="transparent-background-color" *ngIf="!isSelectMode()">
-<<<<<<< HEAD
-        <ion-title size="medium">Momentos</ion-title>
-=======
         <ion-title size="medium">Momentos <span class="complementTitle" *ngIf="albumName">({{albumName}})</span>
         </ion-title>
->>>>>>> f2ca15b4ad26db109f866d9bb2e551d2660251ed
         <ion-buttons slot="start">
             <ion-back-button defaultHref="pagina-inicial"></ion-back-button>
         </ion-buttons>
@@ -32,8 +28,7 @@
     <ion-grid fixed>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="detalhe-momento" image="../../assets/img/imgDef.png" time="13:29"
-                    *ngFor="let i of [].constructor(12) ">
+                <app-media-item route="detalhe-momento" image="../../assets/img/imgDef.png" time="13:29" *ngFor="let i of [].constructor(12) ">
                 </app-media-item>
             </ion-col>
         </ion-row>
