--- a/src/app/modal-vivenciar-momentos/modal-vivenciar-momentos.page.html
+++ b/src/app/modal-vivenciar-momentos/modal-vivenciar-momentos.page.html
@@ -9,14 +9,14 @@
                     <ion-radio value="foto"></ion-radio>
                     <ion-label style="padding-left: 5px;">Fotografia</ion-label>
                 </ion-item>
-                <ion-item class="item-background-color">
+                <ion-item lines="none" class="item-background-color">
                     <ion-radio value="video"></ion-radio>
                     <ion-label style="padding-left: 5px;">Video</ion-label>
                 </ion-item>
-                <div class="row ion-padding" *ngIf="video">
-                    <ion-label class="">Tempo de gravação</ion-label>
+                <ion-item *ngIf="video" class="item-background-color" class="ion-margin-horizontal">
+                    <ion-label>Tempo de gravação</ion-label>
                     <ion-input placeholder="00:00"></ion-input>
-                </div>
+                </ion-item>
             </ion-radio-group>
         </ion-list>
         <ion-grid fixed>
@@ -35,7 +35,8 @@
 
     <div *ngIf="mostra2">
         <ion-title class="ion-padding">Vivenciar momentos.</ion-title>
-        <ion-label class="ion-padding">Posicione o dispositivo virado para o seu grupo de amigos e aproveite o momento!</ion-label><br>
+        <ion-label class="ion-padding">Posicione o dispositivo virado para o seu grupo de amigos e aproveite o momento!
+        </ion-label><br>
         <ion-label class="ion-padding">Pode deixar que nos tratamos dos momentos.</ion-label>
         <ion-row class="ion-justify-content-center">
             <ion-col size="auto">
