--- a/src/app/momentos/momentos.page.html
+++ b/src/app/momentos/momentos.page.html
@@ -28,7 +28,8 @@
     <ion-grid fixed>
         <ion-row>
             <ion-col size="auto">
-                <app-media-item route="detalhe-momento" image="../../assets/img/imgDef.png" time="13:29" *ngFor="let i of [].constructor(12) ">
+                <app-media-item route="momentos" image={{i.value.src}} place={{i.value.localizacao}}
+                    time={{i.value.hora}} *ngFor="let i of albuns.slice(2,10) | keyvalue">
                 </app-media-item>
             </ion-col>
         </ion-row>
