--- a/src/app/modal-compra-efetuada/modal-compra-efetuada.page.html
+++ b/src/app/modal-compra-efetuada/modal-compra-efetuada.page.html
@@ -1,8 +1,15 @@
-<ion-content class="ion-margin">
-    <div>
-        <ion-title>Copra realizada com sucesso!</ion-title>
-        <ion-button (click)="finalizarCompra()">
-            Continuar a reviver os meus momentos
-        </ion-button>
+<ion-content>
+    <div class="ion-margin">
+        <ion-row class="ion-padding">
+            <ion-title>Concluído</ion-title>
+        </ion-row>
+        <ion-row class="ion-padding">
+            <ion-label class="ion-text-center">Compra realizada com sucesso!</ion-label>
+        </ion-row>
+        <ion-row class="ion-padding ion-justify-content-center">
+            <ion-button (click)="finalizarCompra()" class="ion-text-wrap" style="width: 90%; ">
+                Continuar a reviver os meus momentos
+            </ion-button>
+        </ion-row>
     </div>
 </ion-content>
