--- a/src/app/modal-apagar-momento/modal-apagar-momento.page.html
+++ b/src/app/modal-apagar-momento/modal-apagar-momento.page.html
@@ -1,8 +1,14 @@
 <ion-content>
-    <ion-title>Apagar momento.</ion-title>
-    <ion-label>Tem a certeza que pretende apagar estemomento?</ion-label>
-    <section>
-        <ion-button (click)="cancelar()">Cancelar</ion-button>
-        <ion-button color="danger" (click)="confirma()">Apagar</ion-button>
-    </section>
+    <div class="ion-margin">
+        <ion-row class="ion-padding">
+            <ion-title>Apagar momento.</ion-title>
+        </ion-row>
+        <ion-row class="ion-padding">
+            <ion-label class="ion-text-center">Tem a certeza que pretende apagar estemomento?</ion-label>
+        </ion-row>
+        <section class="ion-justify-content-center ion-text-center">
+            <ion-button (click)="cancelar()" style="width: 45%;">Cancelar</ion-button>
+            <ion-button color="danger" (click)="confirma()" style="width: 45%;">Apagar</ion-button>
+        </section>
+    </div>
 </ion-content>
