--- a/src/global.scss
+++ b/src/global.scss
@@ -58,6 +58,13 @@ ion-backdrop {
     border-radius: 15px;
 }
 
+.modal-apagar-css .modal-wrapper {
+    height: 28%;
+    width: 70%;
+    top: 20%;
+    border-radius: 15px;
+}
+
 .modal-fim-compra-css .modal-wrapper {
     height: 30%;
     width: 70%;
