--- a/src/app/notificacoes/notificacoes.page.html
+++ b/src/app/notificacoes/notificacoes.page.html
@@ -12,7 +12,7 @@
 
 <ion-content>
     <ion-list>
-        <ion-item>
+        <ion-item (click)="onClick()">
             <ion-avatar slot="start">
                 <img src="../../assets/img/jb.png">
             </ion-avatar>
@@ -23,18 +23,18 @@
             <ion-icon color="dark" slot="end" name="notifications-outline"></ion-icon>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="onClick2()">
             <ion-avatar slot="start">
                 <img src="../../assets/img/leo.png">
             </ion-avatar>
             <ion-label>
                 <h2>Leonardo Lopez</h2>
-                <h4>Partilhou um momento consigo!</h4>
+                <h4>Partilhou um álbum consigo!</h4>
             </ion-label>
             <ion-icon color="dark" slot="end" name="notifications-outline"></ion-icon>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="onClick()">
             <ion-avatar slot="start">
                 <img src="../../assets/img/valdo.png">
             </ion-avatar>
@@ -45,13 +45,13 @@
             <ion-icon color="dark" slot="end" name="notifications-outline"></ion-icon>
         </ion-item>
 
-        <ion-item>
+        <ion-item (click)="onClick2()">
             <ion-avatar slot="start">
                 <img src="../../assets/img/nat.png">
             </ion-avatar>
             <ion-label>
                 <h2>Natália Fusco</h2>
-                <h4>Partilhou um momento consigo!</h4>
+                <h4>Partilhou um álbum consigo!</h4>
             </ion-label>
             <ion-icon color="dark" slot="end" name="notifications-outline"></ion-icon>
         </ion-item>
